About: A p5.js tropical cyclone simulation game

v20190228a:
    + Added save/load methods for ActiveSystem and NCMetadata (current environmental field data) classes
v20190225a:
    + Added save/load methods for Storm and StormRef classes
    * WIP (almost finished) season saving/loading algorithm now includes the storms (only TCs) in that season
    * Small change to saved basin localStorage keys to accomodate future sim options
    * As a test, seasons are "saved" to the global variable testSavedSeasons during basin autosaves
        > They aren't actually saved to localStorage and loading the saved basin test is still the same as before
v20190217a:
    + Added track display modes, currently accessed by pressing the "T" key (mobile-friendly UI coming later)
        > There are 3 modes as of this update, which the "T" key cycles through
            > The first mode shows the tracks from first tropical formation to last tropical dissipation of systems active at the viewed tick
            > The second mode shows the full tracks of all systems active at the viewed tick, including extratropical systems
            > The third mode shows the tracks from first tropical formation to last tropical dissipation of all systems in the viewed season ("Season track display mode")
    * Capped storm icon rotation speed for storms exceeding 270 kts
v20190216a:
    + Added saving/loading methods for the StormData class
    * Storms no longer continue off the edge of the map, but are now killed as soon as the center reaches the edge
    * Changed how new instances of Storm and ActiveSystem are created when a new storm is spawned (optimization for saving/loading)
    * basin.activeSystems now contains ActiveSystem objects instead of Storm objects
    * The category of a storm at each point in its life is now calculated on the fly rather than stored as a property
v20190210a:
    + Added crash screen in case this crashes