@@ -1,5 +1,5 @@
 const TITLE = "Cyclone Simulator";
-const VERSION_NUMBER = "20190228a";
+const VERSION_NUMBER = "20190305a";
 
 const SAVE_FORMAT = 0;  // Format "0" is probably to be a test and ultimately incompatible
 const EARLIEST_COMPATIBLE_FORMAT = 0;
@@ -80,6 +80,7 @@ const ENVDATA_SAVE_FLOAT = -2;
 const ENVDATA_SAVE_MULT = 10000;
 const ACTIVESYSTEM_SAVE_FLOAT = -2;
 const STORMDATA_POS_MULT = 5;
+const SAVE_SLOTS = 6; // including autosave slot 0
 
 const OFF_SEASON_POLAR_TEMP = -3;
 const PEAK_SEASON_POLAR_TEMP = 10;
